# simple-error

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: lib.rs
