[package]
name = "simple-error"
version = "0.2.3"
authors = ["Wangshan Lu <wisagan@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/simple-error/"
repository = "https://github.com/WiSaGaN/simple-error.git"
description = """
A simple error type backed by a string
"""
keywords = ["error", "simple-error"]

[dependencies]
